syntax = "proto2";

package sf.solana.block_meta.v1;

message PbMintTokenLayout {
  repeated uint32 metadata_args = 1;
}

message Arg {
  required string instruction_type = 1;
  optional PbMintTokenLayout mintToken = 2;
}

message InputAccounts {
  optional string fee_payer = 1;
  optional string data_account = 2;
  optional string merkle_tree = 3;
  optional string system_program = 4;
  optional string recipient = 5;
  optional string tree_config = 6;
  optional string bubblegum_program = 7;
  optional string log_wrapper = 8;
  optional string compression_program = 9;
  optional string collection_mint = 10;
  optional string collection_metadata = 11;
  optional string collection_edition = 12;
  optional string bubblegum_signer = 13;
  optional string token_metadata_program = 14;
}

message Meta {
  required string block_date = 1;
  required int64 block_time = 2;
  required string tx_id = 3;
  required string dapp = 4;
  required uint64 block_slot = 5;
  required uint32 instruction_index = 7;
  required bool is_inner_instruction = 8;
  required uint32 inner_instruction_index = 9;
  required string instruction_type = 10;
  required Arg args = 11;
  required InputAccounts input_accounts = 12;
}

message Output {
  repeated Meta data = 1;
}